example/lib/src/generated/errors/errors_localization_cs.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Czech (`cs`).
class ErrorsLocalizationCs extends ErrorsLocalization {
  ErrorsLocalizationCs([String locale = 'cs']) : super(locale);

  @override
  String get error => 'Došlo k chybě';

  @override
  String get unexpectedError => 'Došlo k neočekávané chybě';

  @override
  String get bugReportSentText => 'Hlášení o chybě bylo úspěšně odesláno.';
}
